change html structure and css styles to fix layout problem

--- a/src/css/components/table/_latest-table.pcss
+++ b/src/css/components/table/_latest-table.pcss
@@ -22,3 +22,7 @@
     width: 10%;
   }
 }
+
+.tbody-extreme-hint {
+  background: #f9f9f9;
+}
